--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <title>Rick and Morty Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
   </head>
 <body>
     <div class="container">
@@ -13,7 +16,7 @@
             <img src="rick-and-morty-portal-moon.png" alt="Imagen" class="w-100 h-100">
           </div>
           <div class="col-8 text-center">
-            <h2>Rick & Morty Frikipedia</h2>
+            <h1 class="font-edit">Rick & Morty Frikipedia</h1>
           </div>
         </header>
     
@@ -43,8 +46,21 @@
               </div>
               <div class="row p-3 d-none justify-content-center" id="character-episodes">
               </div>
+              <div id="location-card" class="d-none">
+                <div class="row mb-4 pt-3 justify-content-center" id="location-main-info">
+                    <div class="col-md-6 d-flex flex-column">
+                        <h5 id="location-name">Título</h5>
+                        <p id="location-type">Texto descriptivo.</p>
+                        <p id="location-dimension">Texto descriptivo.</p>
+                    </div>
+                </div>
+                <div class="row p-3 justify-content-center" id="location-characters">
+                </div>
+            </div>
             </div>
             <div class="border p-3 row justify-content-center" id="central-div">
+              <h5 class="text-center font-edit">Please, select an episode.</h5>
+              <img src="../rick-and-morty-background-pic.jpeg" alt="Rick and Morty background">
             </div>
           </div>
         </div>
@@ -54,6 +70,7 @@
           </div>
       </footer>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>    <script src="index.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>    
+      <script type="module" src="./dist/index.js"></script>
 </body>
 </html>
