README added and episodes divs styles modified.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </div>
               <div id="location-card" class="d-none">
                 <div class="row mb-4 pt-3 justify-content-center" id="location-main-info">
-                    <div class="col-md-6 d-flex flex-column">
+                    <div class="col-md-6 d-flex flex-column align-items-center">
                         <h5 id="location-name">Título</h5>
                         <p id="location-type">Texto descriptivo.</p>
                         <p id="location-dimension">Texto descriptivo.</p>
