img folder added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header class="row align-items-center py-4 rounded">
           <div class="col-2">
-            <img src="rick-and-morty-portal-moon.png" alt="Imagen" class="w-100 h-100">
+            <img src="./img/rick-and-morty-portal-moon.png" alt="Imagen" class="w-100 h-100">
           </div>
           <div class="col-8 text-center">
             <h1 class="font-edit">Rick & Morty Frikipedia</h1>
@@ -60,7 +60,7 @@
             </div>
             <div class="border p-3 row justify-content-center" id="central-div">
               <h5 class="text-center font-edit">Please, select an episode.</h5>
-              <img src="../rick-and-morty-background-pic.jpeg" alt="Rick and Morty background">
+              <img src="./img/rick-and-morty-background-pic.jpeg" alt="Rick and Morty background">
             </div>
           </div>
         </div>
