--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p id="character-properties">Texto descriptivo.</p>
                     <p id="character-gender">Texto descriptivo.</p>
                     <p id="character-species">Texto descriptivo.</p>
-                    <p id="character-location">Texto descriptivo.</p>
+                    <a id="character-location">Texto descriptivo.</>
                 </div>
               </div>
               <div class="row p-3 d-none justify-content-center" id="character-episodes">
